--- a/script/R/analysis/articulation.Rmd
+++ b/script/R/analysis/articulation.Rmd
@@ -153,6 +153,8 @@ kot_art_all
 
 ### Plot
 #### Scatter plot
+- Error bars show SEM of the mean
+
 ```{r kot-art-all-scatter, echo = FALSE}
 ggerrorplot(kot_art, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "KOT (ms)", title = "KOT: Articulation") +
   theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
@@ -223,16 +225,14 @@ kot_art_trial_all
 
 ```{r kot-art-trial-all-line-legato, echo = FALSE}
 ggline(kot_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Legato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  scale_x_continuous(breaks = seq(1,8,1)) +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ```{r kot-art-trial-all-line-staccato, echo = FALSE}
 ggline(kot_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Articulation/Staccato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  scale_x_continuous(breaks = seq(1,8,1)) +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 
@@ -338,16 +338,14 @@ kor_art_trial_all
 
 ```{r kor-art-trial-all-line-legato, echo = FALSE}
 ggline(kor_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOR", title = "KOR: Articulation/Legato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r kor-art-trial-all-line-staccato, echo = FALSE}
 ggline(kor_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOR", title = "KOR: Articulation/Legato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key-Overlap Time (KOT) - Dynamics{#kot-dynamics}
@@ -379,8 +377,15 @@ kot_dyn_all
 ```
 
 ### Plot
-#### Box plot
+#### Scatter plot
+- Error bars show SEM of the mean
 
+```{r kot-dyn-all-scatter, echo = FALSE}
+ggerrorplot(kot_dyn, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "KOT (ms)", title = "KOT: Dynamics") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+```
+
+#### Box plot
 ```{r kot-dyn-all-box, echo = FALSE}
 kot_dyn_plot <- data.table(subject = kot_dyn[Condition == "teaching"]$SubNr, teaching = kot_dyn[Condition == "teaching"]$Mean, performing = kot_dyn[Condition == "performing"]$Mean, subcomponent = kot_dyn[Condition == "teaching"]$Subcomponent)
 
@@ -439,16 +444,14 @@ kot_dyn_trial_all
 
 ```{r kot-dyn-trial-all-line-forte, echo = FALSE}
 ggline(kot_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Dynamics/Forte") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r kot-dyn-trial-all-line-piano, echo = FALSE}
 ggline(kot_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOT (ms)", title = "KOT: Dynamics/Piano") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key-Overlap Ratio (KOR) - Dynamics
@@ -479,6 +482,14 @@ kor_dyn_all
 ```
 
 ### Plot
+#### Scatter plot
+- Error bars show SEM of the mean
+
+```{r kor-dyn-all-scatter, echo = FALSE}
+ggerrorplot(kor_dyn, x = "Condition", y = "Mean", add = "jitter", add.params = list(color = "darkgray"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "KOR", title = "KOR: Dynamics") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+```
+
 #### Box plot
 ```{r kor-dyn-all-box, echo = FALSE}
 kor_dyn_plot <- data.table(subject = kor_dyn[Condition == "teaching"]$SubNr, teaching = kor_dyn[Condition == "teaching"]$Mean, performing = kor_dyn[Condition == "performing"]$Mean, subcomponent = kor_dyn[Condition == "teaching"]$Subcomponent)
@@ -537,15 +548,15 @@ kor_dyn_trial_all
 - Error bars show SEM of the mean
 
 ```{r kor-dyn-trial-all-line-forte, echo = FALSE}
-ggline(kor_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOR", title = "KOR: Dynamics/Forte") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggline(kor_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOR", title = "KOR: Dynamics/Forte") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r kor_dyn_trial_all_line_piano, echo = FALSE}
 ggline(kor_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KOR", title = "KOR: Dynamics/Piano") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 # Sequence plot
@@ -554,9 +565,9 @@ ggline(kor_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = 
 # For each individual
 kot_art_seq <- dt_kot_art[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Articulation") +
-  scale_x_continuous(breaks=seq(1,66,1)) +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Articulation") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 ## Dynamics{#sequence_dyn}
@@ -564,7 +575,7 @@ ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = posi
 # For each individual
 kot_dyn_seq <- dt_kot_dyn[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(kot_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Dynamics") +
-  scale_x_continuous(breaks=seq(1,66,1)) +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggline(kot_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Dynamics")+
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,66,1)) 
 ```
