--- a/script/R/analysis/articulation.Rmd
+++ b/script/R/analysis/articulation.Rmd
@@ -274,7 +274,7 @@ ggerrorplot(kor_art, x = "Condition", y = "Mean", add = "jitter", add.params = l
   theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
-```{r kor-art-all-bar, echo = FALSE}
+```{r kor-art-all-box, echo = FALSE}
 kor_art_plot <- data.table(subject = kor_art[Condition == "teaching"]$SubNr, teaching = kor_art[Condition == "teaching"]$Mean, performing = kor_art[Condition == "performing"]$Mean, subcomponent = kor_art[Condition == "teaching"]$Subcomponent)
 
 ggpaired(kor_art_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KOR", title = "KOR: Articulation") +
@@ -561,21 +561,21 @@ ggline(kor_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = 
 
 # Sequence plot
 ## Articulation{#sequence_art}
-```{r seq-art, fig.width = 10, fig.height = 2, echo = FALSE}
+```{r seq-art, fig.width = 9, fig.height = 3, echo = FALSE}
 # For each individual
 kot_art_seq <- dt_kot_art[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Interval)]
 
 ggline(kot_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Articulation") +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 ## Dynamics{#sequence_dyn}
-```{r seq-dyn, fig.width = 10, fig.height = 2, echo = FALSE}
+```{r seq-dyn, fig.width = 9, fig.height = 3, echo = FALSE}
 # For each individual
 kot_dyn_seq <- dt_kot_dyn[, .(N = .N, Mean = mean(KOT), SD = sd(KOT)), by = .(SubNr, Condition, Skill, Interval)]
 
 ggline(kot_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOT (ms)", title = "KOT: Dynamics")+
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,66,1)) 
 ```
