--- a/script/R/preprocessor/error_summary.Rmd
+++ b/script/R/preprocessor/error_summary.Rmd
@@ -5,35 +5,42 @@ output: html_notebook
 
 - Last checked: `r format(Sys.Date(), "%d-%b-%Y")`
 
+# Workflow
+1. filter with `filtering.R`
+2. check the details of errors and remove some participants if needed (**this script**: `error_summary.Rmd`)
+3. trim data (i.e., remove outliers) with `trimming.R`
+4. check trimmed data and remove some participants if needed (`included_summary.Rmd`)
+
 ```{r setup, include = FALSE}
 # packages
 # data manipulation
 if (!require("data.table")) {install.packages("data.table"); require("data.table")}
 # plot
 if (!require("ggplot2")) {install.packages("ggplot2"); require("ggplot2")}
-if (!require("ggsignif")) {install.packages("ggsignif"); require("ggsignif")}
-# statistics
-if (!require("stats")) {install.packages("stats"); require("stats")}
-if (!require("effsize")) {install.packages("effsize"); require("effsize")}
-if (!require("ez")) {install.packages("ez"); require("ez")}
+if (!require("here")) {install.packages("here"); require("here")}
+
+# set working directory
+here::i_am("error_summary.Rmd")
 
 # function
-source("./function.R")
+source(here("function.R"))
 
 # read a text file for ideal performance
-dt_ideal <- read.table("./ideal.txt")
+dt_ideal <- read.table(here("ideal.txt"))
 colnames(dt_ideal) <- "Pitch"
 dt_ideal$RowNr <- 1:nrow(dt_ideal)
 setcolorder(dt_ideal, c(2, 1))
 # 
-dt_onset <- fread(file = "./filtered/dt_correct_onset.txt", sep = ",")
-dt_offset <- fread(file = "./filtered/dt_correct_offset.txt", sep = ",")
-error_onset <- fread(file = "./filtered/error_onset.txt", sep = ",")
-error_offset <- fread(file = "./filtered/error_offset.txt", sep = ",")
+dt_onset <- fread(file = here("filtered", "dt_correct_onset.txt"), sep = ",")
+dt_offset <- fread(file = here("filtered", "dt_correct_offset.txt"), sep = ",")
+error_onset <- fread(file = here("filtered", "error_onset.txt"), sep = ",")
+error_offset <- fread(file = here("filtered", "error_offset.txt"), sep = ",")
 ```
 
+# Design
 - Each performance (1 trial) contains 72 responses for onsets and 72 responses for offsets (i.e., if there is no mistake, 144 responses in total)
 - Each block contains 8 trials and there are 4 blocks (teaching vs. performing x articulation vs. dynamics)
+- Note: SubNr 3 was excluded due to insufficient motor skills
 
 # Outline
 1. [Onset reports](#onset)
@@ -41,8 +48,8 @@ error_offset <- fread(file = "./filtered/error_offset.txt", sep = ",")
 
 ## ONSET
 ### Corrected Error Onset (All)
-```{r onset_all, echo = FALSE}
-error_onset_all <- error_onset[CorrectionNr != "Exclude",]
+```{r onset-all, echo = FALSE}
+error_onset_all <- error_onset[CorrectionNr != "Exclude"]
 
 # separate errors depending on reasons
 # SubNr 10, BlockNr 1, TrialNr 6
@@ -56,27 +63,27 @@ error_onset_all
 ```
 
 ### Corrected Error Onset (Summary)
-```{r onset_summary, echo = FALSE}
+```{r onset-summary, echo = FALSE}
 error_onset_all[startsWith(Reason, "Substituted")]$Reason <- "Substituted"
 error_onset_summary <- error_onset_all[, .(N = .N, Sum = sum(as.numeric(CorrectionNr))), by = .(Reason)]
 error_onset_summary
 ```
 
 ### Missing/Excluded Trials Onset (All)
-```{r na_onset_all, echo = FALSE}
+```{r na-onset-all, echo = FALSE}
 missing_onset <- checker(dt_onset, dt_ideal)
 missing_onset
 ```
 
 ### Missing/Excluded Trials Onset (Summary)
-```{r na_onset_summary, echo = FALSE}
+```{r na-onset-summary, echo = FALSE}
 missing_onset_summary <- missing_onset[, .(N = .N), by = .(Reason)]
 missing_onset_summary
 ```
 
 ## OFFSET
 ### Corrected Error Offset (All)
-```{r offset_all, echo = FALSE}
+```{r offset-all, echo = FALSE}
 error_offset_all <- error_offset[CorrectionNr != "Exclude",]
 
 # separate errors depending on reasons
@@ -109,20 +116,20 @@ error_offset_all
 ```
 
 ### Corrected Error Offset (Summary)
-```{r offset_summary, echo = FALSE}
+```{r offset-summary, echo = FALSE}
 error_offset_all[startsWith(Reason, "Substituted")]$Reason <- "Substituted"
 error_offset_summary <- error_offset_all[, .(N = .N, Sum = sum(as.numeric(CorrectionNr))), by = .(Reason)]
 error_offset_summary
 ```
 
 ### Missing/Excluded Trials Offset (All)
-```{r na_offset_all, echo = FALSE}
+```{r na-offset-all, echo = FALSE}
 missing_offset <- checker(dt_offset, dt_ideal)
 missing_offset
 ```
 
 ### Missing/Excluded Trials Offset (Summary)
-```{r na_offset_summary, echo = FALSE}
+```{r na-offset-summary, echo = FALSE}
 missing_offset_summary <- missing_offset[, .(N = .N), by = .(Reason)]
 missing_offset_summary
 ```
