export r chunks as R scripts
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-1/analysis/demographics/questionnaire.Rmd
+++ b/experiment-1/analysis/demographics/questionnaire.Rmd
@@ -63,3 +63,7 @@ data.table("Answer" = dt_included$`Did you try to perform differently when you a
 ```{r 2, echo = FALSE}
 data.table("Answer" = dt_included$`Have you noticed anything special regarding the tasks in the experiment? If any, please describe below.`)
 ```
+
+```{r export, include = FALSE}
+knitr::purl("questionnaire.Rmd")
+```
